[gd_scene load_steps=14 format=3 uid="uid://dbovkios5xgxw"]

[ext_resource type="Script" path="res://src/Extra/MainScreen/settings.gd" id="1_80c5s"]
[ext_resource type="FontFile" uid="uid://dbcbmpufkv7it" path="res://assets/fonts/Abaddon Bold.ttf" id="2_5dmt2"]
[ext_resource type="Texture2D" uid="uid://8lqbix2eiyxo" path="res://assets/packs/GUI_1/GUI.png" id="3_c841l"]
[ext_resource type="Texture2D" uid="uid://dd1tvmp3gm4xp" path="res://assets/packs/SimpleKeys/Jumbo/Light/Single PNGs/F.png" id="4_vvj34"]
[ext_resource type="Texture2D" uid="uid://biqajake7b8lf" path="res://assets/packs/SimpleKeys/Jumbo/Light/Single PNGs/G.png" id="5_fqp5k"]
[ext_resource type="Texture2D" uid="uid://dvoh1o50c4bfy" path="res://assets/packs/SimpleKeys/Jumbo/Light/Single PNGs/J.png" id="6_8cyib"]
[ext_resource type="Texture2D" uid="uid://cltkrr0pd0osc" path="res://assets/packs/SimpleKeys/Jumbo/Light/Single PNGs/K.png" id="7_4d4ow"]
[ext_resource type="Texture2D" uid="uid://b80xmg8430iw0" path="res://assets/packs/SimpleKeys/Jumbo/Light/Single PNGs/SPACE.png" id="8_h6gg3"]
[ext_resource type="Texture2D" uid="uid://dcdqxxxdjopyy" path="res://assets/packs/SimpleKeys/Jumbo/Light/Single PNGs/ARROWDOWN.png" id="9_1yc1v"]
[ext_resource type="Texture2D" uid="uid://dp1hkr1k2kol5" path="res://assets/packs/SimpleKeys/Jumbo/Light/Single PNGs/ARROWUP.png" id="10_jiukp"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_gcdt8"]
texture = ExtResource("3_c841l")
region_rect = Rect2(145, 81, 46, 14)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_jdc11"]
texture = ExtResource("3_c841l")
region_rect = Rect2(145, 113, 46, 14)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_vofio"]
texture = ExtResource("3_c841l")
region_rect = Rect2(145, 65, 46, 14)

[node name="Settings_menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_80c5s")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 0
offset_left = 100.0
offset_top = 260.0
offset_right = 1045.0
offset_bottom = 535.0
color = Color(0.407056, 0.407056, 0.407056, 1)

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 0
offset_left = 62.0
offset_top = 31.0
offset_right = 1068.0
offset_bottom = 598.0
theme_override_constants/margin_left = 12
theme_override_constants/margin_top = 12
theme_override_constants/margin_right = 12
theme_override_constants/margin_bottom = 12

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="Title" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 6
theme_override_fonts/font = ExtResource("2_5dmt2")
theme_override_font_sizes/font_size = 55
text = "SETTINGS"
horizontal_alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 250
theme_override_constants/margin_top = 30
theme_override_constants/margin_right = 100
theme_override_constants/margin_bottom = 25

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/MarginContainer"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2
size_flags_vertical = 4
theme_override_constants/separation = 15

[node name="Sound" type="Label" parent="MarginContainer/VBoxContainer/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 6
theme_override_constants/shadow_offset_y = 2
theme_override_font_sizes/font_size = 25
text = "Sounds"

[node name="Volume" type="HSlider" parent="MarginContainer/VBoxContainer/MarginContainer/VBoxContainer/Sound"]
layout_mode = 2
offset_left = 155.0
offset_top = 10.0
offset_right = 533.0
offset_bottom = 26.0
max_value = 25.0
value = 15.0

[node name="Resolution" type="Label" parent="MarginContainer/VBoxContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 6
theme_override_constants/shadow_offset_y = 2
theme_override_font_sizes/font_size = 25
text = "Resolutions"

[node name="Resolution_b" type="OptionButton" parent="MarginContainer/VBoxContainer/MarginContainer/VBoxContainer/Resolution"]
layout_mode = 0
offset_left = 154.0
offset_top = 2.0
offset_right = 375.0
offset_bottom = 33.0
item_count = 3
popup/item_0/text = "1280 x 720"
popup/item_0/id = 0
popup/item_1/text = "1366 x 768"
popup/item_1/id = 1
popup/item_2/text = "1920 x 1080"
popup/item_2/id = 2

[node name="Back_but" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 10
size_flags_stretch_ratio = 0.0
theme_override_fonts/font = ExtResource("2_5dmt2")
theme_override_font_sizes/font_size = 25
theme_override_styles/normal = SubResource("StyleBoxTexture_gcdt8")
theme_override_styles/hover = SubResource("StyleBoxTexture_jdc11")
theme_override_styles/pressed = SubResource("StyleBoxTexture_vofio")
text = "RETURN"

[node name="F" type="Sprite2D" parent="."]
position = Vector2(172.5, 393.5)
scale = Vector2(3, 3)
texture = ExtResource("4_vvj34")

[node name="G" type="Sprite2D" parent="."]
position = Vector2(310.5, 390.5)
scale = Vector2(3, 3)
texture = ExtResource("5_fqp5k")

[node name="J" type="Sprite2D" parent="."]
position = Vector2(806.5, 394.5)
scale = Vector2(3, 3)
texture = ExtResource("6_8cyib")

[node name="K" type="Sprite2D" parent="."]
position = Vector2(946.5, 394.5)
scale = Vector2(3, 3)
texture = ExtResource("7_4d4ow")

[node name="Space" type="Sprite2D" parent="."]
position = Vector2(573, 501)
scale = Vector2(3, 3)
texture = ExtResource("8_h6gg3")

[node name="Arrowdown" type="Sprite2D" parent="."]
position = Vector2(876.5, 394.5)
scale = Vector2(3, 3)
texture = ExtResource("9_1yc1v")

[node name="Arrowup" type="Sprite2D" parent="."]
position = Vector2(239.5, 392.5)
scale = Vector2(3, 3)
texture = ExtResource("10_jiukp")

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.573043
anchor_top = 0.0461538
anchor_right = 0.573043
anchor_bottom = 0.0461538
offset_left = -248.0
offset_top = 234.0
offset_right = 94.0
offset_bottom = 302.0
grow_horizontal = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_5dmt2")
theme_override_font_sizes/font_size = 60
text = "CONTROLLERS"
metadata/_edit_use_anchors_ = true

[node name="Label3" type="Label" parent="Label"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.423977
anchor_top = -2.79412
anchor_right = 0.423977
anchor_bottom = -2.79412
offset_left = -142.0
offset_top = 328.0
offset_right = 200.0
offset_bottom = 396.0
grow_horizontal = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_5dmt2")
theme_override_font_sizes/font_size = 60
text = "DOUBLE HIT"
metadata/_edit_use_anchors_ = true

[node name="Label2" type="Label" parent="Label"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.502924
anchor_top = -1.0
anchor_right = 0.502924
anchor_bottom = -1.0
offset_left = 187.0
offset_top = 112.0
offset_right = 427.0
offset_bottom = 180.0
grow_horizontal = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_5dmt2")
theme_override_font_sizes/font_size = 60
text = "HIT DOWN"
metadata/_edit_use_anchors_ = true

[node name="Label" type="Label" parent="Label"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.418129
anchor_top = -1.05882
anchor_right = 0.418129
anchor_bottom = -1.05882
offset_left = -396.0
offset_top = 114.0
offset_right = -54.0
offset_bottom = 182.0
grow_horizontal = 2
scale = Vector2(1, 1.00276)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_5dmt2")
theme_override_font_sizes/font_size = 60
text = "HIT UP"
metadata/_edit_use_anchors_ = true

[connection signal="value_changed" from="MarginContainer/VBoxContainer/MarginContainer/VBoxContainer/Sound/Volume" to="." method="_on_volume_value_changed"]
[connection signal="item_selected" from="MarginContainer/VBoxContainer/MarginContainer/VBoxContainer/Resolution/Resolution_b" to="." method="_on_resolution_b_item_selected"]
